# leptos-sled-template

./: .gitignore  Cargo.toml  cargo-generate.toml  plan.md
.cargo/: config.toml
hooks/: post-gen.sh
leptos-app/: Cargo.toml  index.html
leptos-app/src/: chat.rs  chat_debug_header.rs  chat_scroll_manager.rs  debug_overlay.rs  editable_text_field.rs  header.rs  main.rs  message_context_menu.rs  message_input.rs  message_row.rs  notification_manager.rs  require.rs
model/: Cargo.toml
react-app/src/: utils.ts
react-app/src/components/: Chat.tsx  DebugOverlay.tsx  MessageContextMenu.tsx  MessageInput.tsx
server/: Cargo.toml
server/src/: main.rs
